final phase 1 gas estimations
