# node/coinstacks/optimism/api/src/controller.ts
@@ -1,6 +1,5 @@
 import { serialize } from '@ethersproject/transactions'
-import { ethers, Contract, Transaction } from 'ethers'
-import { BigNumber as bn } from 'bignumber.js'
+import { ethers, Contract, BigNumber } from 'ethers'
 import { Body, Controller, Example, Get, Path, Post, Query, Response, Route, Tags } from 'tsoa'
 import { Blockbook } from '@shapeshiftoss/blockbook'
 import { Logger } from '@shapeshiftoss/logger'
@@ -17,6 +16,7 @@ import {
 import { API, Account, Tx, TxHistory } from '../../../common/api/src/evm' // unable to import models from a module with tsoa
 import { Service } from '../../../common/api/src/evm/service'
 import { OptimismGasEstimate, OptimismGasFees } from './models'
+import bn from 'bignumber.js'
 
 const ETHERSCAN_API_KEY = process.env.ETHERSCAN_API_KEY
 const INDEXER_URL = process.env.INDEXER_URL
@@ -37,7 +37,7 @@ export const logger = new Logger({
 
 const CHAIN_ID: Record<string, number> = { mainnet: 10 }
 
-const provider = new ethers.JsonRpcProvider(RPC_URL)
+const provider = new ethers.providers.JsonRpcProvider(RPC_URL)
 
 export const service = new Service({
   blockbook: new Blockbook({ httpURL: INDEXER_URL, wsURL: INDEXER_WS_URL }),
@@ -48,10 +48,8 @@ export const service = new Service({
   rpcUrl: RPC_URL,
 })
 
-const gpoAbi = ethers.Interface.from(getContractInterface('OVM_GasPriceOracle'))
-
 // gas price oracle contract to query current l1 and l2 values
-const gpo = new Contract(predeploys.OVM_GasPriceOracle, gpoAbi, provider)
+const gpo = new Contract(predeploys.OVM_GasPriceOracle, getContractInterface('OVM_GasPriceOracle'), provider)
 
 @Route('api/v1')
 @Tags('v1')
@@ -230,28 +228,17 @@ export class Optimism extends Controller implements BaseAPI, API {
     // l2 gas limit
     const { gasLimit } = await service.estimateGas(data, from, to, value)
 
-    const unsignedTxHashOld = serialize({
+    // l1 gas limit
+    const unsignedTxHash = serialize({
       data,
       to,
-      value: ethers.parseUnits(value, 'wei'),
-      gasLimit: BigInt(gasLimit),
+      value: ethers.utils.parseUnits(value, 'wei'),
+      gasLimit: BigNumber.from(gasLimit),
       chainId: CHAIN_ID[NETWORK as string],
       nonce: await provider.getTransactionCount(from),
     })
 
-    // l1 gas limit
-    const unsignedTxHash = Transaction.from({
-      data,
-      to,
-      value: ethers.parseUnits(value, 'wei'),
-      gasLimit: BigInt(gasLimit),
-      chainId: CHAIN_ID[NETWORK as string],
-      nonce: await provider.getTransactionCount(from),
-    }).unsignedSerialized
-
-    console.log({ unsignedTxHashOld, unsignedTxHash })
-
-    const l1GasLimit = ((await gpo.getL1GasUsed(unsignedTxHash)) as bigint).toString()
+    const l1GasLimit = ((await gpo.getL1GasUsed(unsignedTxHash)) as BigNumber).toString()
 
     return { gasLimit, l1GasLimit }
   }
@@ -264,25 +251,18 @@ export class Optimism extends Controller implements BaseAPI, API {
    * @returns {Promise<OptimismGasFees>} current fees specified in wei
    */
   @Example<OptimismGasFees>({
-    gasPrice: '1000000',
     l1GasPrice: '25000000000',
+    gasPrice: '1000000',
+    slow: {},
+    average: {},
+    fast: {},
   })
   @Response<InternalServerError>(500, 'Internal Server Error')
   @Get('/gas/fees')
   async getGasFees(): Promise<OptimismGasFees> {
-    // ethers bignumber values read from contract are stringified to be used with bignumber.js which handles floats for scalar math
-    const l1BaseFee = ((await gpo.l1BaseFee()) as bigint).toString()
-    const baseScalar = ((await gpo.scalar()) as bigint).toString()
-    const decimals = ((await gpo.decimals()) as bigint).toString()
-
-    // l1 gas price
-    const scalar = bn(baseScalar).div(bn(10).pow(decimals)).toFixed()
-    const l1GasPrice = bn(l1BaseFee).times(scalar).toFixed(0)
-
-    // l2 gas price
-    const { gasPrice } = await service.getGasFees()
-
-    return { gasPrice, l1GasPrice }
+    const { l1GasPrice } = (await provider.send('rollup_gasPrices', [])) as { l1GasPrice: string }
+    const gasFees = await service.getGasFees()
+    return { l1GasPrice: new bn(l1GasPrice).toFixed(0), ...gasFees }
   }
 
   /**
